[package]
authors = ["Otniel Aguilar <otnieel.aguilar@gmail.com>"]
edition = "2018"
name = "belfort"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1.3", features = ["derive"] }
yahoo_finance_api = { version = "1.1"}
tokio = { version = "1", features = ["full"] }

