[package]
authors = ["Otniel Aguilar <otnieel.aguilar@gmail.com>"]
edition = "2018"
name = "belfort"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1.3", features = ["derive"] }
yahoo_finance_api = { version = "1.1"}
async-trait = "0.1.52"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }

[dependencies.async-std]
version = "1.10.0"
features = ["unstable"]

